--- a/GoAndroid/bin/AndroidManifest.xml
+++ b/GoAndroid/bin/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/image_titre"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
