--- a/GoAndroid/bin/AndroidManifest.xml
+++ b/GoAndroid/bin/AndroidManifest.xml
@@ -24,6 +24,15 @@
             </intent-filter>
         </activity>
         <activity
+            android:name="com.example.goandroid.MenuPlateau"
+            android:label="@string/app_name" 
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name="com.example.goandroid.plateau_neuf"
             android:label="@string/app_name" 
             android:screenOrientation="portrait"
@@ -48,6 +57,15 @@
             android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.goandroid.OptionsActivity"
+            android:label="@string/app_name" 
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
