--- a/GoAndroid/AndroidManifest.xml
+++ b/GoAndroid/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.goandroid"
     android:versionCode="1"
     android:versionName="1.0" >
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -61,6 +62,15 @@
         </activity>
         <activity
             android:name="com.example.goandroid.OptionsActivity"
+            android:label="@string/app_name" 
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.goandroid.AProposActivity"
             android:label="@string/app_name" 
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar">
